# ctl-petri-net-checker

./: Cargo.toml  LICENSE  README.md  design.txt  house.005.card.results  manifesto.txt
src/: ctl.rs  ctl_parser.rs  graph.rs  main.rs  marking_set.rs  petri_net.rs  petri_parser.rs  query.rs  storage.rs  successors.rs  xml_util.rs
