[package]

name = "rust_fun"
version = "0.0.1"
authors = [ "Samuel Pastva <daemontus@gmail.com>" ]

[dependencies]

typed-arena = "1.2.0"
clap = "2.5.2"
pnml-parser = { git = "https://github.com/daemontus/pnml-parser.git" }
mcc-ctl-parser = { git = "https://github.com/daemontus/mcc-ctl-parser.git" }
