[package]

name = "ctl-checker"
version = "0.9.0"
authors = [ "Samuel Pastva <daemontus@gmail.com>" ]

[dependencies]

twox-hash = "1.0.0" #TODO: experiment with other hash functions
typed-arena = "1.2.0"
clap = "2.5.2"
pnml-parser = { git = "https://github.com/daemontus/pnml-parser.git" }
mcc-ctl-parser = { git = "https://github.com/daemontus/mcc-ctl-parser.git" }
